--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,202 @@
+/*------------------------
+      GENERAL
+-------------------------*/
+@font-face {
+    font-family: 'bebas_neuebold';
+    src: url('/fonts/bebasneue_bold-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'bebas_neuebook';
+    src: url('/fonts/bebasneue_book-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_book-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'bebas_neuelight';
+    src: url('/fonts/bebasneue_light-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'bebas_neueregular';
+    src: url('/fonts/bebasneue_regular-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'bebas_neuethin';
+    src: url('/fonts/bebasneue_thin-webfont.woff2') format('woff2'),
+         url('/fonts/bebasneue_thin-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'bestloversregular';
+    src: url('/fonts/bestlovers-webfont.woff2') format('woff2'),
+         url('/fonts/bestlovers-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
+    font-family: 'Lato', sans-serif;
     text-decoration: none;
     text-align: center;
     color:black;
     background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/concrete_seamless.png");
 }
+
+h1 {
+  font-family: 'bestloversregular';
+  font-size: 5,4em;
+}
+h2, h3, h4, h5 {
+  font-family: 'bebas_neuebook';
+}
+
+.bg-blue{
+  background-color: #19112f; 
+}
+.pt-l{padding-top:5rem;}
+.pb-l{padding-bottom: 5rem;}
+
+/*------------------------
+        NAV BAR
+-------------------------*/
+
+.navbar {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background: rgba(0,0,0,0.1);
+  color: #333;
+  transition: all 0.3s;
+}
+
+/*logo plus onglet recruteur*/
+.navbar-brand {
+  position: absolute;
+  padding: 0;
+  top: 0;
+  left: 0;
+  width: 100px;
+  display: none;
+  box-shadow: 4px 4px 9px rgba(0,0,0,0.3);
+}
+
+.navbar-recruteur{
+  padding-left: 100px;
+  color: black;
+}
+
+
+.cl-effect-5 a {
+  overflow: hidden;
+}
+
+.cl-effect-5 a span {
+  position: relative;
+  display: inline-block;
+  -webkit-transition: -webkit-transform 0.3s;
+  -moz-transition: -moz-transform 0.3s;
+  transition: transform 0.3s;
+}
+
+.cl-effect-5 a span::before {
+  position: absolute;
+  color: black;
+  top: 100%;
+  content: attr(data-hover);
+  font-weight: 700;
+  -webkit-transform: translate3d(0,0,0);
+  -moz-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.cl-effect-5 a:hover span,
+.cl-effect-5 a:focus span {
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  transform: translateY(-100%);
+}
+
+
+.fred_nav_logo_img {
+  background-image: url('images/wyn-logo.png');
+  background-repeat: no-repeat;
+  width: 160px;
+  height: 303px;
+  position: absolute;
+  top: 20%;
+  left: 45%;
+}
+
+/*navbar autres onglets*/
+.navbar-light .navbar-nav .nav-link{
+  color: #fff;
+  margin-right: 20px;
+}
+
+.navbar-light .navbar-nav .nav-link #border a {
+  border : 1px solid white;
+  border-radius: 5px;
+}
+
+
+.navbar #border a:hover {
+  background-color: white;
+  color: black;
+  transition: all 0.2s;
+}
+
+
+#navbarTogglerDemo02.navbar-collapse.collapse.show {
+  text-align: right;
+}
+
+/*navbar after scroll*/
+.navbar.compressed {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: white;
+  color: black;
+}
+
+.navbar.compressed .navbar-nav .nav-link {
+  color: black;
+  margin-right: 20px;
+}
+
+
+.navbar.compressed #border a {
+  border : 1px solid black;
+  border-radius: 5px;
+}
+
+.fred_nav_logo_img.scroll {
+  background-image: url('images/wny-logo.jpg');
+  background-repeat: no-repeat;
+  width: 160px;
+  height: 303px;
+  position: absolute;
+  top: 10%;
+  left: 20%;
+}
+
+.text-center{
+  padding-top: 100px;
+}
+
+
+/*------------------------
+         COLLAB
+-------------------------*/
 
 .collab .name{
     font-variant: small-caps;
@@ -20,13 +213,6 @@ body {
 .bg-red{
   background-color: #8f201a;
 }
-.pt-l{padding-top:5rem;}
-.pb-l{padding-bottom: 5rem;}
-
-/*body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}*/
 
 .collab .dev {
     margin: auto;
@@ -58,57 +244,27 @@ body {
  color:rgba(10, 120,147, 1);
 }
 
-
-@media screen and (min-width: 960px){
-    .collab h2 {
-        font-size: 2.5em;
-        padding-bottom: 2%;
-        margin : 2% auto;
-    }
-    
-    .collab .devDesc {
-        margin:auto auto 10% auto;
-    }
-    
-    .collab .perso {
-        margin: 2%;
-    }
-}
-
-@media screen and (min-width: 1140px){
-<<<<<<< HEAD
-   #portofolio_entreprise .content_cadre h3{
-       font-size: 2rem;
-   }
-   #portofolio_entreprise .content_cadre p {
-       font-size: 1.3rem;
-   }
-}
-
-/* Nouvelle disposition sur desktop avec la barre de recherche sur la vidéo */
-@media screen and (min-width: 960px) {
-   #header .content_searchbar {
-   position: absolute;
-   top:45%;
- }
-  /* Barre de recherche en une ligne (display flex) sur la vidéo */
-   #header .search_bar{
-   display: flex;
-   }
-   /* activation du filtre hover en version desktop */
-   #portofolio_entreprise .content_cadre figcaption{
-       visibility: visible;
-   }
-   #portofolio_entreprise .content_cadre:before {
-       visibility: visible;
-   }
-}
+/*------------------------
+        FUN BAR
+-------------------------*/
 
 #funBar .counter-value{
   font-family: 'bebas_neueregular';
   font-size: 4rem;
 }
 #funBar .fake {
+  height: 500px;
+  width: 100%;
+}
+
+/*------------------------
+      SERIOUS BAR
+-------------------------*/
+.counter-value{
+  font-family: 'bebas_neueregular';
+  font-size: 4rem;
+}
+.fake {
   height: 500px;
   width: 100%;
 }
@@ -133,38 +289,38 @@ body {
 }
 
 #myFooter h3 {
-	margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 #myFooter .container {
-	padding-top: 3em;
-	line-height: 1.8;
+  padding-top: 3em;
+  line-height: 1.8;
 }
 
 #myFooter {
-	color:white; 
-	background-color: #8f201a; /* rouge */
+  color:white; 
+  background-color: #8f201a; /* rouge */
 }
 
 #myFooter a{
-	text-decoration: none;
-	color:white;
+  text-decoration: none;
+  color:white;
 }
 
 #myFooter ul {
-	list-style: none;
-	padding-left: initial;
+  list-style: none;
+  padding-left: initial;
   margin-right: initial;
 }
 #myFooter .myMain {
-	border-top: solid;
-/*	border-bottom: dashed;*/
-	padding-bottom: 1.5em;
-	padding-top:1.5em;
+  border-top: solid;
+/*  border-bottom: dashed;*/
+  padding-bottom: 1.5em;
+  padding-top:1.5em;
 }
 #myFooter .mention {
-	border-top: solid;
-	padding-top: 1em;
+  border-top: solid;
+  padding-top: 1em;
 }
 /* ____ MES ICONS _____*/
 #myFooter .icon {
@@ -172,8 +328,8 @@ font-size: 2em;
 }
 
 #myFooter .icon a {
-	margin-left: 0.5em;
-	color:white;
+  margin-left: 0.5em;
+  color:white;
 }
 
 #myFooter .icon:hover {
@@ -200,8 +356,6 @@ font-size: 2em;
     transform: translate3d(4px, 0, 0);
   }
 }
-
-
 
 .cl-effect-1 a::before,
 .cl-effect-1 a::after {
@@ -237,8 +391,6 @@ font-size: 2em;
     -moz-transform: translateX(0px);
     transform: translateX(0px);
 }
-
-
 
 #myFooter .input {
   position: relative;
@@ -410,144 +562,43 @@ font-size: 2em;
   height: 1280px;
   position:relative;
 }
-=======
-
-/* CSS de la NavBar */ 
-@import "https://fonts.googleapis.com/css?family=Lato:400,700,900";
 
 
-.navbar {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background: rgba(0,0,0,0.1);
-  color: #333;
-  transition: all 0.3s;
+/*------------------------
+      MEDIA QUERIES
+-------------------------*/
+
+
+@media screen and (min-width: 960px){
+    .collab h2 {
+        font-size: 2.5em;
+        padding-bottom: 2%;
+        margin : 2% auto;
+    }
+    
+    .collab .devDesc {
+        margin:auto auto 10% auto;
+    }
+    
+    .collab .perso {
+        margin: 2%;
+    }
+    #header .content_searchbar {
+     position: absolute;
+     top:45%;
+    }
+  /* Barre de recherche en une ligne (display flex) sur la vidéo */
+   #header .search_bar{
+   display: flex;
+   }
+   /* activation du filtre hover en version desktop */
+   #portofolio_entreprise .content_cadre figcaption{
+       visibility: visible;
+   }
+   #portofolio_entreprise .content_cadre:before {
+       visibility: visible;
+   }
 }
-
-/*logo plus onglet recruteur*/
-.navbar-brand {
-  position: absolute;
-  padding: 0;
-  top: 0;
-  left: 0;
-  width: 100px;
-  display: none;
-  box-shadow: 4px 4px 9px rgba(0,0,0,0.3);
-}
-
-.navbar-recruteur{
-  padding-left: 100px;
-  color: black;
-}
-
-
-.cl-effect-5 a {
-  overflow: hidden;
-}
-
-.cl-effect-5 a span {
-  position: relative;
-  display: inline-block;
-  -webkit-transition: -webkit-transform 0.3s;
-  -moz-transition: -moz-transform 0.3s;
-  transition: transform 0.3s;
-}
-
-.cl-effect-5 a span::before {
-  position: absolute;
-  color: black;
-  top: 100%;
-  content: attr(data-hover);
-  font-weight: 700;
-  -webkit-transform: translate3d(0,0,0);
-  -moz-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}
-
-.cl-effect-5 a:hover span,
-.cl-effect-5 a:focus span {
-  -webkit-transform: translateY(-100%);
-  -moz-transform: translateY(-100%);
-  transform: translateY(-100%);
-}
-
-
-.fred_nav_logo_img {
-  background-image: url('images/wyn-logo.png');
-  background-repeat: no-repeat;
-  width: 160px;
-  height: 303px;
-  position: absolute;
-  top: 20%;
-  left: 45%;
-}
-
-
-/*navbar autres onglets*/
-.navbar-light .navbar-nav .nav-link{
-  color: #fff;
-  margin-right: 20px;
-}
-
-.navbar-light .navbar-nav .nav-link #border a {
-  border : 1px solid white;
-  border-radius: 5px;
-}
-
-
-.navbar #border a:hover {
-  background-color: white;
-  color: black;
-  transition: all 0.2s;
-}
-
-
-#navbarTogglerDemo02.navbar-collapse.collapse.show {
-  text-align: right;
-}
-
-/*navbar after scroll*/
-.navbar.compressed {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background: white;
-  color: black;
-}
-
-.navbar.compressed .navbar-nav .nav-link {
-  color: black;
-  margin-right: 20px;
-}
-
-
-.navbar.compressed #border a {
-  border : 1px solid black;
-  border-radius: 5px;
-}
-
-
-
-.fred_nav_logo_img.scroll {
-  background-image: url('images/wny-logo.jpg');
-  background-repeat: no-repeat;
-  width: 160px;
-  height: 303px;
-  position: absolute;
-  top: 10%;
-  left: 20%;
-}
-
-
-
-
-
-.text-center{
-  padding-top: 100px;
-}
-
-
-
-
 
 @media screen and (max-width: 990px){
   .navbar{
@@ -561,4 +612,13 @@ font-size: 2em;
   }
 }
 
+@media screen and (min-width: 1140px){
+
+   #portofolio_entreprise .content_cadre h3{
+       font-size: 2rem;
+   }
+   #portofolio_entreprise .content_cadre p {
+       font-size: 1.3rem;
+   }
+}
 
