--- a/style.css
+++ b/style.css
@@ -1,82 +1,138 @@
 /*------------------------
 	    GENERAL
 -------------------------*/
+
 @font-face {
-    font-family: 'bebas_neuebold';
-    src: url('./fonts/bebasneue_bold-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'bebas_neuebook';
-    src: url('./fonts/bebasneue_book-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_book-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'bebas_neuelight';
-    src: url('./fonts/bebasneue_light-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_light-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'bebas_neueregular';
-    src: url('./fonts/bebasneue_regular-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'bebas_neuethin';
-    src: url('./fonts/bebasneue_thin-webfont.woff2') format('woff2'),
-         url('./fonts/bebasneue_thin-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'bebas_neuebold';
+  src: url('./fonts/bebasneue_bold-webfont.woff2') format('woff2'), url('./fonts/bebasneue_bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'bestloversregular';
-    src: url('./fonts/bestlovers-webfont.woff2') format('woff2'),
-         url('./fonts/bestlovers-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'bebas_neuebook';
+  src: url('./fonts/bebasneue_book-webfont.woff2') format('woff2'), url('./fonts/bebasneue_book-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'bebas_neuelight';
+  src: url('./fonts/bebasneue_light-webfont.woff2') format('woff2'), url('./fonts/bebasneue_light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'bebas_neueregular';
+  src: url('./fonts/bebasneue_regular-webfont.woff2') format('woff2'), url('./fonts/bebasneue_regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'bebas_neuethin';
+  src: url('./fonts/bebasneue_thin-webfont.woff2') format('woff2'), url('./fonts/bebasneue_thin-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'bestloversregular';
+  src: url('./fonts/bestlovers-webfont.woff2') format('woff2'), url('./fonts/bestlovers-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 h1 {
-	font-family: 'bestloversregular';
-	font-size: 5,4em;
-}
-h2, h3, h4, h5 {
-	font-family: 'bebas_neuebook';
+  font-family: 'bestloversregular';
+  font-size: 5, 4em;
 }
 
-.bg-blue{
-	background-color: #19112f; 
+h2, h3, h4, h5 {
+  font-family: 'bebas_neuebook';
 }
-.bg-white{
-    background-color: #FFF;
+
+.bg-blue {
+  background-color: #19112f;
 }
-.pt-l{padding-top:5rem;}
-.pb-l{padding-bottom: 5rem;}
+
+.bg-white {
+  background-color: #FFF;
+}
+
+.pt-l {
+  padding-top: 5rem;
+}
+
+.pb-l {
+  padding-bottom: 5rem;
+}
+
+.btn-dev{
+  color: #FFF;
+  background-color: #d83832;
+  border-color:transparent;
+}
 
 /*------------------------
-	  OFFRES D'EMPLOIS
+	         ADMIN
 -------------------------*/
 
-#job h2 {
-    font-family: 'bebas_neuebold';
+body.admin {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
 }
-#job h3{
-    font-family: 'Lato';
-    font-size: 1.2em;
+
+.form-signin img{
+  width: 100px;
 }
 
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
 
+.form-signin .checkbox {
+  font-weight: 400;
+}
 
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
