--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -502,17 +502,7 @@ body.admin {
 ------------------------ */
 
 
-#header_blog .writeit{
-  z-index: 1;
-  font-family: 'bebas_neuebook';
-  color: black;
-  font-size: 20pt;
-  line-height: 53px;
-  text-align: center;
-  padding: 31.5px 0 70px 0;
-  top: 43%;
-  left: 35%;
-}
+
 
 
 #header_blog .after {
@@ -563,6 +553,10 @@ z-index: 1;
 #blog .content{
   color: #999;
   margin: 0;
+}
+
+#blog .container{
+  padding-top: 30px;
 }
 
 
@@ -905,6 +899,28 @@ font-size: 2em;
      top: 20%;
      left: 45%;
    }
+   #header_blog .logo_wild {
+     background-image: url('../images/wyn-logo.png');
+     background-repeat: no-repeat;
+     width: 160px;
+     height: 303px;
+     position: absolute;
+     top: 18%;
+     left: 45%;
+   }
+
+  #header_blog .writeit{
+    z-index: 1;
+    font-family: 'IBM Plex Mono', monospace;
+    color:rgba(25,17,47);
+    font-size: 4rem;
+    line-height: 53px;
+    text-align: center;
+    padding: 31.5px 0 70px 0;
+    top: 43%;
+    left: 22%;
+  }
+
 }
 
 @media screen and (max-width: 990px){
