--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,13 +92,13 @@ h2, h3, h4, h5 {
   padding: 0;
   top: 0;
   left: 0;
-  width: 120px;
+  width: 100px;
   display: none;
   box-shadow: 4px 4px 9px rgba(0,0,0,0.3);
 }
 
 .navbar-recruteur{
-  padding-left: 100px;
+  padding-left: 105px;
   color: black;
 }
 
@@ -767,6 +767,7 @@ font-size: 2em;
   max-width: 350px;
   width: calc(100% - 1em);
   vertical-align: top;
+  padding-bottom: 0.5em;
 }
 
 #myFooter .input__field {
@@ -1041,10 +1042,7 @@ z-index: 1;
        visibility: visible;
    }
    #header .logo_wild {
-     background-image: url('../images/wyn-logo.png');
-     background-repeat: no-repeat;
-     width: 160px;
-     height: 303px;
+     width: 115px;
      position: absolute;
      top: 20%;
      left: 45%;
