--- a/views/serious-bar.pug
+++ b/views/serious-bar.pug
@@ -2,16 +2,9 @@ section#serious-bar.bg-blue.pt-l.pb-l
   .container
     #counter
       .row.text-center.text-white
-        .col-4
-          i.fas.fa-4x.fa-users
-          .counter-value(data-count='2000') 0
-          h2 Collaborateurs
-        .col-4
-          i.far.fa-4x.fa-building
-          .counter-value(data-count='500') 0
-          h2 Entreprises partenaires
-        .col-4
-          i.far.fa-4x.fa-compass
-          .counter-value(data-count='200') 0
-          h2 Métiers
+        for bar in barList
+          .col-4
+            i.fas.fa-4x(class=bar.picto)
+            .counter-value(data-count=bar.numbers) 0
+            h2= bar.name
   // /.container
