--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -394,7 +394,7 @@ h2, h3, h4, h5 {
     vertical-align: top;
 }
 
-#formEmploi button, input {
+#formEmploi button, #formEmploi input {
     border: 0.09em dashed black;
     overflow: hidden;
     border-right: none;
@@ -523,8 +523,6 @@ body.admin {
   align-items: center;
   -webkit-box-pack: center;
   justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
   background-color: #f5f5f5;
 }
 
