--- a/views/admin.pug
+++ b/views/admin.pug
@@ -2,32 +2,74 @@ extends layout
 
 block content
   body
-    section#admin
-          .container
-            .row
-              .col-2
-                .row
-                  a#modifBar(href='#') Bar
-                .row
-                  a#modifOffres(href='#') Offres Emplois
-              .col-10
-                .row
-                  #contentBar
-                    table.table
-                      - for (var i = 0; i < bar.length; i++)
-                        tr
-                          td= bar[i].name
-                          td= bar[i].picto
-                          td= bar[i].numbers
-                          td
-                            a.modifier Modifier
-                .row
-                  #contentOffres
-                    table.table
-                      - for (var i = 0; i < missions.length; i++)
-                        tr
-                          td= missions[i].nom_poste
-                          td= missions[i].recruteur
-                          td= missions[i].duree
-                          td
-                            a.modifier Modifier
+    section(id='admin wrapper')
+      #sidebar-wrapper
+        ul.sidebar-nav
+          li.nav-profile
+            .profile-image
+              img(src='/images/dev07.jpg')
+            .profile-name
+              p.name M. Jones
+          li
+            a.links#modifBar(href='#', data-showdiv='contentBar') Bar
+          li
+            a.links#modifOffres(href='#', data-showdiv='contentOffres') Offres Emplois
+          li
+            a.links#modifCollab(href='#', data-showdiv='contentCollab') Collaborateurs
+      #page-content-wrapper
+        .container-fluid
+          #contentBar.divs
+            table.table
+              thead
+                tr
+                  th Nom
+                  th Icône
+                  th Nombres
+                  th
+              - for (var i = 0; i < bar.length; i++)
+                tr
+                  td= bar[i].name
+                  td= bar[i].picto
+                  td= bar[i].numbers
+                  td
+                    a(href='#', class='modifier btn btn-primary') Modifier
+          #contentOffres.divs
+            table.table
+              thead
+                tr
+                  th Nom du poste
+                  th Recruteur
+                  th Durée
+                  th Localisation
+                  th Diplôme
+                  th Expérience
+                  th
+              - for (var i = 0; i < missions.length; i++)
+                tr.no-edit
+                  td= missions[i].nom_poste
+                  td= missions[i].recruteur
+                  td= missions[i].duree
+                  td= missions[i].localisation
+                  td= missions[i].diplome
+                  td= missions[i].experience
+                  td
+                    a(href='#', class='modifier btn btn-primary', data-showedit=missions[i].id) Modifier
+          #contentCollab.divs
+            table.table
+              thead
+                tr
+                  th Nom
+                  th Age
+                  th Technologies
+                  th Expérience
+                  th Image
+                  th
+              - for (var i = 0; i < collab.length; i++)
+                tr
+                  td= collab[i].name
+                  td= collab[i].age
+                  td= collab[i].techno
+                  td= collab[i].experience
+                  td= collab[i].image
+                  td
+                    a(href='#', class='modifier btn btn-primary') Modifier
