--- a/views/fun-bar.pug
+++ b/views/fun-bar.pug
@@ -2,9 +2,9 @@ section#funBar.bg-red.pt-l.pb-l
   .container
     #counter
       .row.text-center.text-white
-        for bar in barList
+        - for (var i = 0; i < fun.length; i++)
           .col-4
-            i.fas.fa-4x(class=bar.picto)
-            .counter-value(data-count=bar.numbers) 0
-            h2= bar.name
+            i.fas.fa-4x(class=fun[i].picto)
+            .counter-value(data-count=fun[i].numbers) 0
+            h2= fun[i].name
   // /.container
